--- a/fun-random-quote/package.json
+++ b/fun-random-quote/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smallmuzzy/fun-random-quote.git"
+  }
 }
